--- a/German/main/Calendar.apk/res/values-de/plurals.xml
+++ b/German/main/Calendar.apk/res/values-de/plurals.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="Nminutes">
-        <item quantity="other">%d minutes</item>
-        <item quantity="one">1 minute</item>
+        <item quantity="other">%d Minuten</item>
+        <item quantity="one">Eine Minute</item>
     </plurals>
     <plurals name="Nmins">
-        <item quantity="other">%d mins</item>
-        <item quantity="one">1 min</item>
+        <item quantity="other">%d Min.</item>
+        <item quantity="one">Eine Min.</item>
     </plurals>
     <plurals name="Nhours">
-        <item quantity="other">%d hours</item>
-        <item quantity="one">1 hour</item>
+        <item quantity="other">%d Stunden</item>
+        <item quantity="one">Eine Stunde</item>
     </plurals>
     <plurals name="Ndays">
-        <item quantity="other">%d days</item>
-        <item quantity="one">1 day</item>
+        <item quantity="other">%d Tage</item>
+        <item quantity="one">Ein Tag</item>
     </plurals>
     <plurals name="weekN">
-        <item quantity="other">WEEK %d</item>
+        <item quantity="other">Woche %d</item>
     </plurals>
     <plurals name="month_more_events">
         <item quantity="other">+%d</item>
         <item quantity="one">+1</item>
     </plurals>
     <plurals name="Nevents">
-        <item quantity="other">%d events</item>
-        <item quantity="one">1 event</item>
+        <item quantity="other">%d Termine</item>
+        <item quantity="one">Ein Termin</item>
     </plurals>
     <plurals name="N_remaining_events">
-        <item quantity="other">+%d events</item>
-        <item quantity="one">+1 event</item>
+        <item quantity="other">+%d Termine</item>
+        <item quantity="one">+1 Termin</item>
     </plurals>
 </resources>
