--- a/German/main/MiuiGallery.apk/res/values-de/arrays.xml
+++ b/German/main/MiuiGallery.apk/res/values-de/arrays.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-     <string-array name="slideshow_time_entries">
-        <item>5 minutes</item>
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>Unlimited</item>
-    </string-array>
-</resources>
+<?xml version="1.0" encoding="utf-8" ?> 
+- <resources>
+- <string-array name="slideshow_time_entries">
+  <item>5 Minuten</item> 
+  <item>15 Minuten</item> 
+  <item>30 Minuten</item> 
+  <item>1 Stunde</item> 
+  <item>Unendlich</item> 
+  </string-array>
+  </resources>
