--- a/German/main/MiTagApp.apk/res/values-de/plurals.xml
+++ b/German/main/MiTagApp.apk/res/values-de/plurals.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="tags_description">
-        <item quantity="other">apps</item>
-        <item quantity="one">app</item>
+        <item quantity="other">Apps</item>
+        <item quantity="one">App</item>
     </plurals>
     <plurals name="play_description">
-        <item quantity="other">tasks</item>
-        <item quantity="one">task</item>
+        <item quantity="other">Aufgaben</item>
+        <item quantity="one">Aufgabe</item>
     </plurals>
     <plurals name="history_description">
-        <item quantity="other">records</item>
-        <item quantity="one">record</item>
+        <item quantity="other">Aufzeichnungen</item>
+        <item quantity="one">Aufzeichnung</item>
     </plurals>
     <plurals name="select_n_item">
-        <item quantity="other">%d selected</item>
-        <item quantity="zero">Select items</item>
-        <item quantity="one">%d selected</item>
+        <item quantity="other">%d ausgewählt</item>
+        <item quantity="zero">Objekte auswählen</item>
+        <item quantity="one">%d ausgewählt</item>
     </plurals>
 </resources>
